change about and casm page formate

--- a/content/casm.mdx
+++ b/content/casm.mdx
@@ -2,7 +2,7 @@
 title: casm
 ---
 
-casm is x86_64 / amd64 Instruction Set Architecture Assembler, casm is my hobby project, I'm learn how programming language works, basically programming language convert to particular Instruction Set Architecture Assembly and assembler is read assembly and convert to particular Instruction Set Architecture machine code, Computer machine code is binary (0/1), That computer understand and process.
+casm is x86_64 / amd64 Instruction Set Architecture Assembler, casm is my hobby project, I'm learn how programming language works, basically programming language convert to particular Instruction Set Architecture Assembly and assembler is read assembly and convert to particular Instruction Set Architecture machine code, Computer machine code is binary (`0/1`), That computer understand and process.
 
 This assembler is not full fledged, But i'm wrote this assembler and now i'm understand how programming language work.
 
