--- a/content/casm.mdx
+++ b/content/casm.mdx
@@ -7,7 +7,7 @@ casm is x86_64 / amd64 Instruction Set Architecture Assembler, casm is my hobby 
 This assembler is not full fledged, But i'm wrote this assembler and now i'm understand how programming language work.
 
 ## Download
-**[Click Here](https://parthka.com/casm-hobby_v1.tar.gz)** to Download this assembler!
+**[Click Here](https://parthka.com/casm/casm-hobby_v2.tar.gz)** to Download this assembler!
 
 ## Build
 This assembler is written in GoLang, so require GoLang, if GoLang is not install in your computer then install GoLang. Visit [https://go.dev/doc/install](https://go.dev/doc/install) to install GoLang.
