change(about): add interests in about pages

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -10,9 +10,14 @@ I am highly skilled and experienced **Backend-Developer** with a passion for cre
 
 I make things for the web by the web.
 
-I'm expert in Back-End development, But currently specializing in **System Programming** and Low-Level like [Machine Code](https://en.wikipedia.org/wiki/Machine_code), x86_64 / amd64 Instruction Set, Assembly, [Compiler](https://en.wikipedia.org/wiki/Compiler), [Memory Management](https://en.wikipedia.org/wiki/Memory_management), etcetera. Computing and Low-Level is my hobby And passionate about computer.
+I'm expert in Back-End development, But currently specializing in **System Programming** and **Email** System.
 
 I'm a `Computer` geek, so I'm always curious how the Computer works.
+
+## Interests
+- **System Programming**
+- **Email System**
+- **Operating System**
 
 ## Contact
 Email: [hello@parthka.com](mailto:hello@parthka.com)
