Add Socket Programming in Interests

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -16,6 +16,7 @@ I'm a `Computer` geek, so I'm always curious how the Computer works.
 
 ## Interests
 - **System Programming**
+- **Socket Programming**
 - **Email System**
 - **Operating System**
 
