--- a/content/about.mdx
+++ b/content/about.mdx
@@ -21,4 +21,4 @@ I'm a `Computer` geek, so I'm always curious how the Computer works.
 - **Operating System**
 
 ## Contact
-Email: [hello@parthka.com](mailto:hello@parthka.com)
+Email: [hello@parthka.dev](mailto:hello@parthka.dev)
